# matjip

./: .gitignore  README.md  pyproject.toml
chrome-extension/: background.js  content.js  manifest.json  map-bridge.js  popup.html  popup.js  rules.json  styles.css
knowledge/: favorites-subscription-known-unknown.md  place-name-search-known-unknown.md
knowledge/solutions/product-insights/: 20260313-fake-review-cross-signal-detection.md  20260314-fake-review-consecutive-three-char-pattern.md
knowledge/solutions/tool-discoveries/: 20260314-kakao-api-45-limit-multi-center-search.md  20260314-korean-english-address-mapping-favorites-search.md
requirements/: restaurant-agent.md
src/restaurant_assistant/: cli.py  config.py  fake_review.py  favorites.py  models.py  ranking.py  reviews.py  search.py  sync_favorites.py
tests/: test_fake_review.py
