[project]
name = "restaurant-assistant"
version = "0.1.0"
description = "카카오맵 기반 맛집 추천 CLI 도구"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "rich>=13",
    "playwright>=1.49",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
matjip = "restaurant_assistant.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
